fixed directory renaming not affecting nested files
